compute RSME of mean model

--- a/Collaborative-Filtering/Collaborative-Filtering.ipynb
+++ b/Collaborative-Filtering/Collaborative-Filtering.ipynb
@@ -870,11 +870,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.0300824802393536"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# "
+    "# compute RMSE for the mea model\n",
+    "score(cf_user_mean)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Since the score is lower than the baseline, it means that this model is better than the baseline\n"
    ]
   }
  ],
