introduce weighted mean

--- a/Collaborative-Filtering/Collaborative-Filtering.ipynb
+++ b/Collaborative-Filtering/Collaborative-Filtering.ipynb
@@ -896,6 +896,27 @@
    "source": [
     "Since the score is lower than the baseline, it means that this model is better than the baseline\n"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Weighted mean\n",
+    "\n",
+    "In the previous section, all users were given the same weight. However, it only makes sense that we give more weight to the users whose ratings are similar to the user in question. We will therefore alter the mean model by introducing a weight coefficient.\n",
+    "\n",
+    "We will use the cosine score as our similarity function. Like the one we built in the [content-based engine](../Content-Based-Recommenders/Content-Based.ipynb)\n",
+    "\n",
+    "Since Scikit-learn's `cosine_similarity` function doesn't work with NaN values, we will convert all missing values to zero."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
