create cosine similarity

--- a/Collaborative-Filtering/Collaborative-Filtering.ipynb
+++ b/Collaborative-Filtering/Collaborative-Filtering.ipynb
@@ -913,6 +913,389 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>user_id</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "      <th>3</th>\n",
+       "      <th>4</th>\n",
+       "      <th>5</th>\n",
+       "      <th>6</th>\n",
+       "      <th>7</th>\n",
+       "      <th>8</th>\n",
+       "      <th>9</th>\n",
+       "      <th>10</th>\n",
+       "      <th>...</th>\n",
+       "      <th>934</th>\n",
+       "      <th>935</th>\n",
+       "      <th>936</th>\n",
+       "      <th>937</th>\n",
+       "      <th>938</th>\n",
+       "      <th>939</th>\n",
+       "      <th>940</th>\n",
+       "      <th>941</th>\n",
+       "      <th>942</th>\n",
+       "      <th>943</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>user_id</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.108361</td>\n",
+       "      <td>0.046638</td>\n",
+       "      <td>0.029577</td>\n",
+       "      <td>0.245753</td>\n",
+       "      <td>0.335853</td>\n",
+       "      <td>0.344724</td>\n",
+       "      <td>0.191582</td>\n",
+       "      <td>0.057149</td>\n",
+       "      <td>0.251979</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.257073</td>\n",
+       "      <td>0.069412</td>\n",
+       "      <td>0.231643</td>\n",
+       "      <td>0.108093</td>\n",
+       "      <td>0.176842</td>\n",
+       "      <td>0.104799</td>\n",
+       "      <td>0.232472</td>\n",
+       "      <td>0.051528</td>\n",
+       "      <td>0.129555</td>\n",
+       "      <td>0.256333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.108361</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.057613</td>\n",
+       "      <td>0.130237</td>\n",
+       "      <td>0.054918</td>\n",
+       "      <td>0.190552</td>\n",
+       "      <td>0.079399</td>\n",
+       "      <td>0.076146</td>\n",
+       "      <td>0.167992</td>\n",
+       "      <td>0.147376</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.136993</td>\n",
+       "      <td>0.252887</td>\n",
+       "      <td>0.255454</td>\n",
+       "      <td>0.285193</td>\n",
+       "      <td>0.232751</td>\n",
+       "      <td>0.149088</td>\n",
+       "      <td>0.102807</td>\n",
+       "      <td>0.062386</td>\n",
+       "      <td>0.109143</td>\n",
+       "      <td>0.107686</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.046638</td>\n",
+       "      <td>0.057613</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.139805</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.032485</td>\n",
+       "      <td>0.043869</td>\n",
+       "      <td>0.080968</td>\n",
+       "      <td>0.022263</td>\n",
+       "      <td>0.059925</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.027402</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.175060</td>\n",
+       "      <td>0.010343</td>\n",
+       "      <td>0.105635</td>\n",
+       "      <td>0.019052</td>\n",
+       "      <td>0.127099</td>\n",
+       "      <td>0.023917</td>\n",
+       "      <td>0.060392</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.029577</td>\n",
+       "      <td>0.130237</td>\n",
+       "      <td>0.139805</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.045190</td>\n",
+       "      <td>0.088586</td>\n",
+       "      <td>0.199526</td>\n",
+       "      <td>0.135013</td>\n",
+       "      <td>0.026919</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.055392</td>\n",
+       "      <td>0.049773</td>\n",
+       "      <td>0.076549</td>\n",
+       "      <td>0.139382</td>\n",
+       "      <td>0.113886</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.130343</td>\n",
+       "      <td>0.077357</td>\n",
+       "      <td>0.157890</td>\n",
+       "      <td>0.063911</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>0.245753</td>\n",
+       "      <td>0.054918</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.176443</td>\n",
+       "      <td>0.281860</td>\n",
+       "      <td>0.132205</td>\n",
+       "      <td>0.038790</td>\n",
+       "      <td>0.134200</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.183969</td>\n",
+       "      <td>0.019305</td>\n",
+       "      <td>0.073714</td>\n",
+       "      <td>0.041807</td>\n",
+       "      <td>0.081088</td>\n",
+       "      <td>0.029743</td>\n",
+       "      <td>0.188392</td>\n",
+       "      <td>0.068342</td>\n",
+       "      <td>0.055557</td>\n",
+       "      <td>0.207259</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>0.335853</td>\n",
+       "      <td>0.190552</td>\n",
+       "      <td>0.032485</td>\n",
+       "      <td>0.045190</td>\n",
+       "      <td>0.176443</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.394725</td>\n",
+       "      <td>0.143385</td>\n",
+       "      <td>0.125126</td>\n",
+       "      <td>0.372679</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.328643</td>\n",
+       "      <td>0.070809</td>\n",
+       "      <td>0.135806</td>\n",
+       "      <td>0.171670</td>\n",
+       "      <td>0.125446</td>\n",
+       "      <td>0.086464</td>\n",
+       "      <td>0.230566</td>\n",
+       "      <td>0.095478</td>\n",
+       "      <td>0.197307</td>\n",
+       "      <td>0.185268</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>0.344724</td>\n",
+       "      <td>0.079399</td>\n",
+       "      <td>0.043869</td>\n",
+       "      <td>0.088586</td>\n",
+       "      <td>0.281860</td>\n",
+       "      <td>0.394725</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.215861</td>\n",
+       "      <td>0.121224</td>\n",
+       "      <td>0.378723</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.339853</td>\n",
+       "      <td>0.110866</td>\n",
+       "      <td>0.096055</td>\n",
+       "      <td>0.104690</td>\n",
+       "      <td>0.126108</td>\n",
+       "      <td>0.075012</td>\n",
+       "      <td>0.270071</td>\n",
+       "      <td>0.020036</td>\n",
+       "      <td>0.236086</td>\n",
+       "      <td>0.266571</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>0.191582</td>\n",
+       "      <td>0.076146</td>\n",
+       "      <td>0.080968</td>\n",
+       "      <td>0.199526</td>\n",
+       "      <td>0.132205</td>\n",
+       "      <td>0.143385</td>\n",
+       "      <td>0.215861</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.116173</td>\n",
+       "      <td>0.169088</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.150048</td>\n",
+       "      <td>0.064242</td>\n",
+       "      <td>0.118297</td>\n",
+       "      <td>0.053969</td>\n",
+       "      <td>0.168057</td>\n",
+       "      <td>0.095736</td>\n",
+       "      <td>0.164157</td>\n",
+       "      <td>0.076269</td>\n",
+       "      <td>0.089871</td>\n",
+       "      <td>0.210995</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>0.057149</td>\n",
+       "      <td>0.167992</td>\n",
+       "      <td>0.022263</td>\n",
+       "      <td>0.135013</td>\n",
+       "      <td>0.038790</td>\n",
+       "      <td>0.125126</td>\n",
+       "      <td>0.121224</td>\n",
+       "      <td>0.116173</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.152694</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.082819</td>\n",
+       "      <td>0.064400</td>\n",
+       "      <td>0.127051</td>\n",
+       "      <td>0.069251</td>\n",
+       "      <td>0.095673</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.131458</td>\n",
+       "      <td>0.106763</td>\n",
+       "      <td>0.089297</td>\n",
+       "      <td>0.089583</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>0.251979</td>\n",
+       "      <td>0.147376</td>\n",
+       "      <td>0.059925</td>\n",
+       "      <td>0.026919</td>\n",
+       "      <td>0.134200</td>\n",
+       "      <td>0.372679</td>\n",
+       "      <td>0.378723</td>\n",
+       "      <td>0.169088</td>\n",
+       "      <td>0.152694</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.279849</td>\n",
+       "      <td>0.087828</td>\n",
+       "      <td>0.131888</td>\n",
+       "      <td>0.111841</td>\n",
+       "      <td>0.094423</td>\n",
+       "      <td>0.080883</td>\n",
+       "      <td>0.255758</td>\n",
+       "      <td>0.063461</td>\n",
+       "      <td>0.169309</td>\n",
+       "      <td>0.181031</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>10 rows × 943 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "user_id       1         2         3         4         5         6         7    \\\n",
+       "user_id                                                                         \n",
+       "1        1.000000  0.108361  0.046638  0.029577  0.245753  0.335853  0.344724   \n",
+       "2        0.108361  1.000000  0.057613  0.130237  0.054918  0.190552  0.079399   \n",
+       "3        0.046638  0.057613  1.000000  0.139805  0.000000  0.032485  0.043869   \n",
+       "4        0.029577  0.130237  0.139805  1.000000  0.000000  0.045190  0.088586   \n",
+       "5        0.245753  0.054918  0.000000  0.000000  1.000000  0.176443  0.281860   \n",
+       "6        0.335853  0.190552  0.032485  0.045190  0.176443  1.000000  0.394725   \n",
+       "7        0.344724  0.079399  0.043869  0.088586  0.281860  0.394725  1.000000   \n",
+       "8        0.191582  0.076146  0.080968  0.199526  0.132205  0.143385  0.215861   \n",
+       "9        0.057149  0.167992  0.022263  0.135013  0.038790  0.125126  0.121224   \n",
+       "10       0.251979  0.147376  0.059925  0.026919  0.134200  0.372679  0.378723   \n",
+       "\n",
+       "user_id       8         9         10   ...       934       935       936  \\\n",
+       "user_id                                ...                                 \n",
+       "1        0.191582  0.057149  0.251979  ...  0.257073  0.069412  0.231643   \n",
+       "2        0.076146  0.167992  0.147376  ...  0.136993  0.252887  0.255454   \n",
+       "3        0.080968  0.022263  0.059925  ...  0.027402  0.000000  0.175060   \n",
+       "4        0.199526  0.135013  0.026919  ...  0.055392  0.049773  0.076549   \n",
+       "5        0.132205  0.038790  0.134200  ...  0.183969  0.019305  0.073714   \n",
+       "6        0.143385  0.125126  0.372679  ...  0.328643  0.070809  0.135806   \n",
+       "7        0.215861  0.121224  0.378723  ...  0.339853  0.110866  0.096055   \n",
+       "8        1.000000  0.116173  0.169088  ...  0.150048  0.064242  0.118297   \n",
+       "9        0.116173  1.000000  0.152694  ...  0.082819  0.064400  0.127051   \n",
+       "10       0.169088  0.152694  1.000000  ...  0.279849  0.087828  0.131888   \n",
+       "\n",
+       "user_id       937       938       939       940       941       942       943  \n",
+       "user_id                                                                        \n",
+       "1        0.108093  0.176842  0.104799  0.232472  0.051528  0.129555  0.256333  \n",
+       "2        0.285193  0.232751  0.149088  0.102807  0.062386  0.109143  0.107686  \n",
+       "3        0.010343  0.105635  0.019052  0.127099  0.023917  0.060392  0.000000  \n",
+       "4        0.139382  0.113886  0.000000  0.130343  0.077357  0.157890  0.063911  \n",
+       "5        0.041807  0.081088  0.029743  0.188392  0.068342  0.055557  0.207259  \n",
+       "6        0.171670  0.125446  0.086464  0.230566  0.095478  0.197307  0.185268  \n",
+       "7        0.104690  0.126108  0.075012  0.270071  0.020036  0.236086  0.266571  \n",
+       "8        0.053969  0.168057  0.095736  0.164157  0.076269  0.089871  0.210995  \n",
+       "9        0.069251  0.095673  0.000000  0.131458  0.106763  0.089297  0.089583  \n",
+       "10       0.111841  0.094423  0.080883  0.255758  0.063461  0.169309  0.181031  \n",
+       "\n",
+       "[10 rows x 943 columns]"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# create dummy ratings matrix with all null values imputed to 0\n",
+    "r_matrix_dummy = r_matrix.copy().fillna(0)\n",
+    "\n",
+    "# import cosine_score\n",
+    "from sklearn.metrics.pairwise import cosine_similarity\n",
+    "\n",
+    "# compute the cosine similarity matrix using the dummy ratings matrix\n",
+    "cosine_sim = cosine_similarity(r_matrix_dummy, r_matrix_dummy)\n",
+    "\n",
+    "# convert into pandas df\n",
+    "cosine_sim = pd.DataFrame(cosine_sim, index = r_matrix.index, columns=r_matrix.index)\n",
+    "\n",
+    "cosine_sim.head(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
