--- a/Collaborative-Filtering/Collaborative-Filtering.ipynb
+++ b/Collaborative-Filtering/Collaborative-Filtering.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -111,7 +111,7 @@
        "4        5   33   F       other    15213"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -334,7 +334,7 @@
        "[5 rows x 24 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -350,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -360,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -439,7 +439,7 @@
        "4      166       346       1  886397596"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -454,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -487,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -514,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -536,7 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -548,7 +548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -567,7 +567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -576,7 +576,7 @@
        "1.2488234462885457"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -611,7 +611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -828,7 +828,7 @@
        "[5 rows x 1641 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -852,7 +852,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -870,7 +870,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -879,7 +879,7 @@
        "1.0300824802393536"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -913,7 +913,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1273,7 +1273,7 @@
        "[10 rows x 943 columns]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1295,11 +1295,79 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We need to only consider those cosine similarity scores that have a corresponding, non-null rating. Meaning, we need to avoid users that have not rated a movie."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# user based collaborative filterusing weighted mean rating\n",
+    "def cf_user_wmean(user_id, movie_id):\n",
+    "    \n",
+    "    # Check if movie_id exists in r_matrix\n",
+    "    if movie_id in r_matrix:\n",
+    "        \n",
+    "        # Get the similarity scores for the user in question with every other user\n",
+    "        sim_scores = cosine_sim[user_id]\n",
+    "        \n",
+    "        # Get the user ratings for the movie in question\n",
+    "        m_ratings = r_matrix[movie_id]\n",
+    "        \n",
+    "        # Fix bug => ValueError: Input contains NaN, infinity or a value too large for dtype('float64').\n",
+    "        # Check for NaN and infinite values in m_ratings\n",
+    "        if np.isnan(m_ratings).any() or not np.isfinite(m_ratings).all():\n",
+    "            wmean_rating = 3.0 \n",
+    "            return wmean_rating\n",
+    "        \n",
+    "        # Clip very large values in m_ratings\n",
+    "        m_ratings = np.clip(m_ratings, a_min=None, a_max=5.0)\n",
+    "        \n",
+    "        # Extract the indices containing NaN in the m_ratings series\n",
+    "        idx = m_ratings[m_ratings.isnull()].index\n",
+    "        \n",
+    "        # Drop the NaN values from the m_ratings Series\n",
+    "        m_ratings = m_ratings.dropna()\n",
+    "        \n",
+    "        # Drop the corresponding cosine scores from the sim_scores series\n",
+    "        sim_scores = sim_scores.drop(idx)\n",
+    "\n",
+    "        \n",
+    "        # Compute the final weighted mean\n",
+    "        wmean_rating = np.dot(sim_scores, m_ratings) / sim_scores.sum()\n",
+    "    \n",
+    "    else:\n",
+    "        # Default to a rating of 3.0 in the absence of any information\n",
+    "        wmean_rating = 3.0\n",
+    "    \n",
+    "    return wmean_rating"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.2488234462885457"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "score(cf_user_wmean)"
+   ]
   }
  ],
  "metadata": {
