intro user demographic filters

--- a/Collaborative-Filtering/Collaborative-Filtering.ipynb
+++ b/Collaborative-Filtering/Collaborative-Filtering.ipynb
@@ -1368,6 +1368,20 @@
    "source": [
     "score(cf_user_wmean)"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### User demographic\n",
+    "\n",
+    "These filters basically imply that users of the same demographic tend to hace similar tastes. Their effectiveness depends on the assumption that women, or teenagers or people from the same area will share the same taste in movies.\n",
+    "\n",
+    "These filters do not take into account the rating given by all users to a particular movie. Instead, they only look at those that fit in a certain demographic.\n",
+    "\n",
+    "We will create a gender demographic filter. It will identify the gender of a user, compute the weighted mean rating of a movie by that particular gender and return that as the predicted value."
+   ]
   }
  ],
  "metadata": {
