build demographic filter

--- a/Collaborative-Filtering/Collaborative-Filtering.ipynb
+++ b/Collaborative-Filtering/Collaborative-Filtering.ipynb
@@ -1513,6 +1513,41 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Our function will identify the gender of the user, extract the average rating given to the movie in question by that particular gender, and return that value as output."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# set the index of the users df to the user_id\n",
+    "users = users.set_index('user_id')\n",
+    "\n",
+    "# gender based collaborative filter using mean ratings\n",
+    "def cf_gender(user1_id, movie_id):\n",
+    "    # check if movie id exists in r_matrix (training set)\n",
+    "    if movie_id in r_matrix:\n",
+    "        # identify the gender of the user\n",
+    "        gender = users.loc['user_id']['sex']\n",
+    "        # check if the gender has rated the movie\n",
+    "        if gender in gender_mean[movie_id]:\n",
+    "            # compute the mean rating by that gender to the movie\n",
+    "            gender_rating = gender_mean[movie_id][gender]\n",
+    "        else:\n",
+    "            gender_rating = 3.0\n",
+    "    else:\n",
+    "        # default to a rating of 3.0 in the absence of any information\n",
+    "        gender_rating = 3.0\n",
+    "    return gender_rating"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
