get demographic filter score

--- a/Collaborative-Filtering/Collaborative-Filtering.ipynb
+++ b/Collaborative-Filtering/Collaborative-Filtering.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -111,7 +111,7 @@
        "4        5   33   F       other    15213"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -334,7 +334,7 @@
        "[5 rows x 24 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -350,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -360,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -439,7 +439,7 @@
        "4      166       346       1  886397596"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -454,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -487,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -514,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -536,7 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -548,7 +548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -567,7 +567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -576,7 +576,7 @@
        "1.2488234462885457"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -611,7 +611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -828,7 +828,7 @@
        "[5 rows x 1641 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -852,7 +852,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -870,7 +870,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
@@ -879,7 +879,7 @@
        "1.0300824802393536"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -913,7 +913,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
@@ -1273,7 +1273,7 @@
        "[10 rows x 943 columns]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 84,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1304,7 +1304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1351,7 +1351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
@@ -1360,7 +1360,7 @@
        "1.2488234462885457"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 86,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1393,7 +1393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
@@ -1490,7 +1490,7 @@
        "4      862       568       3   25   M  executive    13820"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1504,7 +1504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1522,7 +1522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1530,11 +1530,11 @@
     "users = users.set_index('user_id')\n",
     "\n",
     "# gender based collaborative filter using mean ratings\n",
-    "def cf_gender(user1_id, movie_id):\n",
+    "def cf_gender(user_id, movie_id):\n",
     "    # check if movie id exists in r_matrix (training set)\n",
     "    if movie_id in r_matrix:\n",
     "        # identify the gender of the user\n",
-    "        gender = users.loc['user_id']['sex']\n",
+    "        gender = users.loc[user_id]['sex']\n",
     "        # check if the gender has rated the movie\n",
     "        if gender in gender_mean[movie_id]:\n",
     "            # compute the mean rating by that gender to the movie\n",
@@ -1545,6 +1545,34 @@
     "        # default to a rating of 3.0 in the absence of any information\n",
     "        gender_rating = 3.0\n",
     "    return gender_rating"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.0392906999935203"
+      ]
+     },
+     "execution_count": 90,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "score(cf_gender)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "It doesnt perfom better that the mean ratings filter, meaning that user's gender is not the strongest indicator of their taste in movies"
    ]
   },
   {
