--- a/Collaborative-Filtering/Collaborative-Filtering.ipynb
+++ b/Collaborative-Filtering/Collaborative-Filtering.ipynb
@@ -1572,7 +1572,279 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "It doesnt perfom better that the mean ratings filter, meaning that user's gender is not the strongest indicator of their taste in movies"
+    "It doesn't perfom better that the mean ratings filter, meaning that user's gender is not the strongest indicator of their taste in movies"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead tr th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead tr:last-of-type th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr>\n",
+       "      <th>occupation</th>\n",
+       "      <th colspan=\"2\" halign=\"left\">administrator</th>\n",
+       "      <th colspan=\"2\" halign=\"left\">artist</th>\n",
+       "      <th>doctor</th>\n",
+       "      <th colspan=\"2\" halign=\"left\">educator</th>\n",
+       "      <th colspan=\"2\" halign=\"left\">engineer</th>\n",
+       "      <th>entertainment</th>\n",
+       "      <th>...</th>\n",
+       "      <th colspan=\"2\" halign=\"left\">salesman</th>\n",
+       "      <th colspan=\"2\" halign=\"left\">scientist</th>\n",
+       "      <th colspan=\"2\" halign=\"left\">student</th>\n",
+       "      <th colspan=\"2\" halign=\"left\">technician</th>\n",
+       "      <th colspan=\"2\" halign=\"left\">writer</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>sex</th>\n",
+       "      <th>F</th>\n",
+       "      <th>M</th>\n",
+       "      <th>F</th>\n",
+       "      <th>M</th>\n",
+       "      <th>M</th>\n",
+       "      <th>F</th>\n",
+       "      <th>M</th>\n",
+       "      <th>F</th>\n",
+       "      <th>M</th>\n",
+       "      <th>F</th>\n",
+       "      <th>...</th>\n",
+       "      <th>F</th>\n",
+       "      <th>M</th>\n",
+       "      <th>F</th>\n",
+       "      <th>M</th>\n",
+       "      <th>F</th>\n",
+       "      <th>M</th>\n",
+       "      <th>F</th>\n",
+       "      <th>M</th>\n",
+       "      <th>F</th>\n",
+       "      <th>M</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>movie_id</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>3.937500</td>\n",
+       "      <td>3.750000</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>3.400000</td>\n",
+       "      <td>3.666667</td>\n",
+       "      <td>3.25</td>\n",
+       "      <td>3.884615</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>4.083333</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>3.5</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>4.043478</td>\n",
+       "      <td>3.796296</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>3.750000</td>\n",
+       "      <td>4.00</td>\n",
+       "      <td>3.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>3.666667</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>4.00</td>\n",
+       "      <td>3.500000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>3.066667</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>2.666667</td>\n",
+       "      <td>3.277778</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2.714286</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2.333333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3.500000</td>\n",
+       "      <td>4.000000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>3.777778</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>3.391304</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>4.250000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>3.666667</td>\n",
+       "      <td>3.600000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>4.666667</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>2.50</td>\n",
+       "      <td>3.800000</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>3.650000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>3.4</td>\n",
+       "      <td>3.250000</td>\n",
+       "      <td>3.777778</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>3.333333</td>\n",
+       "      <td>4.25</td>\n",
+       "      <td>3.250000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>4.000000</td>\n",
+       "      <td>2.333333</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>4.00</td>\n",
+       "      <td>2.333333</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>3.500000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>4.333333</td>\n",
+       "      <td>3.111111</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>3.333333</td>\n",
+       "      <td>4.00</td>\n",
+       "      <td>2.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 41 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "occupation administrator           artist              doctor educator  \\\n",
+       "sex                    F         M      F         M         M        F   \n",
+       "movie_id                                                                 \n",
+       "1               3.937500  3.750000    5.0  3.400000  3.666667     3.25   \n",
+       "2               3.000000  3.666667    NaN       NaN       NaN     4.00   \n",
+       "3               3.500000  4.000000    NaN       NaN       NaN      NaN   \n",
+       "4               3.666667  3.600000    NaN  4.666667  3.000000     2.50   \n",
+       "5               4.000000  2.333333    NaN       NaN       NaN     4.00   \n",
+       "\n",
+       "occupation           engineer           entertainment  ... salesman       \\\n",
+       "sex                M        F         M             F  ...        F    M   \n",
+       "movie_id                                               ...                 \n",
+       "1           3.884615      4.0  4.083333           4.0  ...      NaN  4.0   \n",
+       "2           3.500000      NaN  3.066667           NaN  ...      NaN  NaN   \n",
+       "3           2.000000      NaN  3.777778           NaN  ...      NaN  NaN   \n",
+       "4           3.800000      4.0  3.650000           NaN  ...      4.0  4.0   \n",
+       "5           2.333333      NaN  3.500000           NaN  ...      NaN  NaN   \n",
+       "\n",
+       "occupation scientist        student           technician           writer  \\\n",
+       "sex                F    M         F         M          F         M      F   \n",
+       "movie_id                                                                    \n",
+       "1                3.5  4.0  4.043478  3.796296        4.0  3.750000   4.00   \n",
+       "2                NaN  3.0  2.666667  3.277778        NaN  2.714286    NaN   \n",
+       "3                NaN  NaN  3.000000  3.391304        NaN  4.250000    NaN   \n",
+       "4                NaN  3.4  3.250000  3.777778        NaN  3.333333   4.25   \n",
+       "5                NaN  4.0  4.333333  3.111111        NaN  3.333333   4.00   \n",
+       "\n",
+       "occupation            \n",
+       "sex                M  \n",
+       "movie_id              \n",
+       "1           3.000000  \n",
+       "2           2.333333  \n",
+       "3           1.000000  \n",
+       "4           3.250000  \n",
+       "5           2.000000  \n",
+       "\n",
+       "[5 rows x 41 columns]"
+      ]
+     },
+     "execution_count": 91,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# we'll try another demographic filter but this time include gender and occupation\n",
+    "\n",
+    "# compute the mean rating by gender and occupation\n",
+    "gen_occ_mean = merged_df[['sex', 'rating', 'movie_id', 'occupation']].pivot_table(values='rating',index='movie_id', columns=['occupation', 'sex'], aggfunc='mean')\n",
+    "\n",
+    "gen_occ_mean.head()"
    ]
   },
   {
