build gender occupation demographic

--- a/Collaborative-Filtering/Collaborative-Filtering.ipynb
+++ b/Collaborative-Filtering/Collaborative-Filtering.ipynb
@@ -1849,6 +1849,35 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# gender and occupation filter using mean rating\n",
+    "def cf_gen_occ(user_id, movie_id):\n",
+    "    # check if movie_id exists in gen_occ_mean\n",
+    "    if movie_id in gen_occ_mean.index:\n",
+    "        # indentify the user \n",
+    "        user = users.loc[user_id]\n",
+    "        # identify the gender and occupation\n",
+    "        gender = user['sex']\n",
+    "        occ = user['occupation']\n",
+    "        # check if the occupation has rated the movie \n",
+    "        if occ in gen_occ_mean.loc[movie_id]:\n",
+    "            # check if gender has rated the movie \n",
+    "            if gender in gen_occ_mean.loc[movie_id][occ]:\n",
+    "                # extract the required rating\n",
+    "                rating = gen_occ_mean.loc[movie_id][occ][gender]\n",
+    "                # default to 3.0 if the rating is null\n",
+    "                if np.isnan(rating):\n",
+    "                    rating = 3.0\n",
+    "                return rating\n",
+    "    # return the default rating\n",
+    "    return 3.0"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
